syntax = "proto3";

option csharp_namespace = "CartClientApp";

package cartPackage;

message IdRequest
{
	int64 Id = 1;
}

message IdReply
{
	int64 Id = 1;
}

service CartCheck
{
	rpc DoesExist (IdRequest) returns (IdReply);
}